Got text stars_one displaying properly

--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<h1>Bryan Allen's Data Analytics Bootcamp Certificate</h1>
-<br/><br/>
-<h3>Testing Testing see if this is working</h3>
+<!DOCTYPE html>
+<html lang="en"></html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Bryan Allen's Bootcamp Certificate</title>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+</head>
+<body>
+    <section class="wrapper">
+        <div id="stars_one"></div>
+        <div id="stars_two"></div>
+        <div id="stars_three"></div>
+        <div id="title">
+            <span>Data Analytics <wbr>Bootcamp Certificate</span>
+        </div>
+    </section>
+</body>
