--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div id="stars_three"></div>
         <div id="title">
             <span>Data Analytics <wbr>Bootcamp Certificate</span>
+            <br/><br/>
+            <img src="bootcamp_certificate.png" width="300">
         </div>
     </section>
 </body>
