added stars and javascript translateY effect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="stars_two"></div>
         <div id="stars_three"></div>
         <div id="title">
-            <span>Data Analytics <wbr>Bootcamp Certificate</span>
+            <span>Data Analytics <wbr>Bootcamp <wbr>Certificate</span>
             <br/><br/>
             <img src="bootcamp_certificate.png" width="300">
         </div>
