added date at bottom, fixed layout issues for more responsive effect

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <div id="stars_two"></div>
         <div id="stars_three"></div>
         <div id="title">
-            <span>Data Analytics <wbr>Bootcamp <wbr>Certificate</span>
+            <span>Data <wbr>Analytics <wbr>Bootcamp <wbr>Certificate</span>
             <br/><br/>
-            <img src="bootcamp_certificate.png" width="300">
-        </div>
-    </section>
+            <img src="bootcamp_certificate.png">
+            <br/><br/>
+            <span style='font-size: 25px;letter-spacing: 5px;'>Awarded <wbr>September 2022</span>              
+    </section> 
 </body>
