Added @media only tags to CSS file for iPhone/iPad, and added banner to top

--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html lang="en"></html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Bryan Allen's Bootcamp Certificate</title>
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-<body>
-    <section class="wrapper">
-        <div id="stars_one"></div>
-        <div id="stars_two"></div>
-        <div id="stars_three"></div>
-        <div id="title">
-            <span>Data <wbr>Analytics <wbr>Bootcamp <wbr>Certificate</span>
-            <br/><br/>
-            <img src="bootcamp_certificate.png">
-            <br/><br/>
-            <span style='font-size: 25px;letter-spacing: 5px;'>Awarded <wbr>September 2022</span>              
-    </section> 
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Bryan Allen's Bootcamp Certificate</title>
+        <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
+    </head>
+    <body>
+        <img class="img-banner" src="white-banner.png" alt=".png image of white banner for top of page">
+        <br>
+        <section class="wrapper">
+            <article class="img-info">
+                <h2>Data <wbr>Analytics <wbr>Bootcamp <wbr>Certificate</h2>
+                <p>Duis nec augue nec odio lobortis rutrum. In lobortis nunc et tellus cursus ornare. Cras ut rhoncus urna, id luctus turpis. Praesent enim felis, feugiat vitae erat quis, lacinia scelerisque ipsum. Sed sit amet turpis ut arcu tempus euismod vitae sed tellus. Nulla fermentum neque ante, quis viverra sem rhoncus ac. Donec lacinia lobortis nisl non porttitor.</p>
+                <br>
+            </article>
+            <img class="img-cert" src="bootcamp_certificate.png" alt=".png image of Bryan's Bootcamp Certificate">
+            <article class="img-info">
+                <h2>Awarded <wbr>September 2022</h2>
+                <p>Suspendisse nec leo vitae metus viverra convallis vitae nec erat. Pellentesque lacinia nunc et nibh suscipit ultricies eget vel est. Nunc lectus felis, mattis sed mi quis, ultricies auctor quam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec nisi turpis, viverra a blandit dictum, tincidunt elementum neque. Morbi porttitor libero eu lacus sollicitudin, non congue nunc scelerisque.</p>
+                <br>
+            </article>
+        </section>
+            <div id="stars_one"></div>
+            <div id="stars_two"></div>
+            <div id="stars_three"></div>
+            <!--<div id="title">
+                <br/><br/>
+                <br/><br/> -->
+    </body>
+</html>
