--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <section class="wrapper">
             <article class="img-info">
                 <h2>Data <wbr>Analytics <wbr>Bootcamp <wbr>Certificate</h2>
-                <p>Duis nec augue nec odio lobortis rutrum. In lobortis nunc et tellus cursus ornare. Cras ut rhoncus urna, id luctus turpis. Praesent enim felis, feugiat vitae erat quis, lacinia scelerisque ipsum. Sed sit amet turpis ut arcu tempus euismod vitae sed tellus. Nulla fermentum neque ante, quis viverra sem rhoncus ac. Donec lacinia lobortis nisl non porttitor.</p>
+                <!-- <p>Duis nec augue nec odio lobortis rutrum.</p> -->
                 <br>
             </article>
             <img class="img-cert" src="bootcamp_certificate.png" alt=".png image of Bryan's Bootcamp Certificate">
             <article class="img-info">
                 <h2>Awarded <wbr>September 2022</h2>
-                <p>Suspendisse nec leo vitae metus viverra convallis vitae nec erat. Pellentesque lacinia nunc et nibh suscipit ultricies eget vel est. Nunc lectus felis, mattis sed mi quis, ultricies auctor quam. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec nisi turpis, viverra a blandit dictum, tincidunt elementum neque. Morbi porttitor libero eu lacus sollicitudin, non congue nunc scelerisque.</p>
+                <p>Suspendisse nec leo vitae metus viverra convallis vitae nec erat. Pellentesque lacinia nunc et nibh suscipit ultricies eget vel est. Nunc lectus felis, mattis sed mi quis, ultricies auctor quam.</p>
                 <br>
             </article>
         </section>
