Got rocket animated

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     <path id="Vector_31" d="M32.6493 210.925L16.6061 223.462L13.3333 252.498L31.9095 245.807L32.6493 210.925Z" fill="#E6E6E6"/>
                     <path id="Vector_32" d="M51.1739 196.087C48.2363 199.659 42.9718 194.723 46.008 191.243C48.9454 187.671 54.2099 192.607 51.1739 196.087Z" fill="#E6E6E6"/>
                     </g>
-                </svg>
-                    
+                </svg>  
             </div>
+            <h3>"Traveling to planet website..."</h3>
         </div>
         <img class="img-banner" src="white-banner.png" alt=".png image of white banner for top of page">
         <br>
