--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </g>
                 </svg>  
             </div>
-            <h3>"Traveling to planet website..."</h3>
+            <h3>"Traveling to planet webpage..."</h3>
         </div>
         <script src="app.js"></script>
         <img class="img-banner" src="white-banner.png" alt=".png image of white banner for top of page">
