Troubleshooting font awesome

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <img class="img-cert" src="bootcamp_certificate.png" alt=".png image of Bryan's Bootcamp Certificate">
             <article class="img-info">
                 <h2>Awarded <wbr>September 2022</h2>
-                <p>Suspendisse nec leo vitae metus viverra convallis vitae nec erat. Pellentesque lacinia nunc et nibh suscipit ultricies eget vel est. Nunc lectus felis, mattis sed mi quis, ultricies auctor quam.</p>
+                <p>Python pandas module for Data Analytics and Tableau for Data Visualization</p>
                 <br>
             </article>
         </section>
