Got dark mode toggling, still need do CSS props for beauty

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
             </div>
             <h3>"Traveling to planet webpage..."</h3>
         </div>
+        <div>
+            <input type="checkbox" class="checkbox" id="checkbox">
+            <label for="checkbox" class="label">
+                <i class="fa fa-moon"></i>
+                <i class="fa fa-sun"></i>
+                <div class="ball"></div>
+            </label>
+        </div>
         <script src="app.js"></script>
         <img class="img-banner" src="white-banner.png" alt=".png image of white banner for top of page">
         <br>
@@ -94,20 +102,14 @@
                 <br>
             </article>
             <img class="img-cert" src="bootcamp_certificate.png" alt=".png image of Bryan's Bootcamp Certificate">
-            <div>
-                <input type="checkbox" class="checkbox" id="checkbox">
-                <label for="checkbox"></label>
-            </div>
-            <i class="fa fa-moon" style="color: black;"></i>
-            <i class="fa fa-sun" style="color: black;"></i>        
             <article class="img-info">
                 <h2>Awarded <wbr>September 2022</h2>
                 <p>Python pandas module for Data Analytics and Tableau for Data Visualization</p>
                 <br>
             </article>
         </section>
-            <div id="stars_one"></div>
-            <div id="stars_two"></div>
-            <div id="stars_three"></div>         
+        <div id="stars_one"></div>
+        <div id="stars_two"></div>
+        <div id="stars_three"></div>         
     </body>
-</html>
+    </html>
