Adj'd some display values for iPhone and iPad

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
             <article class="img-info">
                 <h2>Data <wbr>Analytics <wbr>Bootcamp <wbr>Certificate</h2>
                 <!-- <p>Duis nec augue nec odio lobortis rutrum.</p> -->
-                <br>
+                <br
             </article>
             <img class="img-cert" src="bootcamp_certificate.png" alt=".png image of Bryan's Bootcamp Certificate">
             <article class="img-info">
                 <h2>Awarded <wbr>September 2022</h2>
-                <p>Python pandas module for Data Analytics and Tableau for Data Visualization</p>
+                <!-- <i class="fa fa-spinner fa-spin" style="font-size:24px; color: #FFF;"></i> -->
+                <p>Python Pandas for Data Analytics</p>
+                <p>Tableau for Data Visualization</p>
                 <br>
             </article>
         </section>
