--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             </div>
             <h3>"Traveling to planet webpage..."</h3>
         </div>
+        <p id="linkedin"><a href="https://linkedin.com/in/frankenmiller">https://linkedin.com/in/frankenmiller</a></p>
         <div>
             <input type="checkbox" class="checkbox" id="checkbox">
             <label for="checkbox" class="label">
