Added functioning hamburger button to upper right, adj'd h3 preloader tag and linked in components

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Bryan Allen's Bootcamp Certificate</title>
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="./style.css">
+        <link rel="stylesheet" type="text/css" href="./burger.css">
         <link rel="stylesheet" href="fontawesome-free-6.2.0-web/css/all.min.css">        
     </head>
     <body>
@@ -82,7 +83,7 @@
                     </g>
                 </svg>  
             </div>
-            <h3>"Traveling to planet webpage..."</h3>
+            <p id="space-traveler">"Traveling to planet webpage..."</p>
         </div>
         <p id="linkedin"><a href="https://linkedin.com/in/frankenmiller">https://linkedin.com/in/frankenmiller</a></p>
         <div>
@@ -94,8 +95,22 @@
             </label>
         </div>
         <script src="app.js"></script>
+        <script src="main.js"></script>
         <img class="img-banner" src="white-banner.png" alt=".png image of white banner for top of page">
         <br>
+        <header class="slide-out">
+            <div class="container">
+                <h2>certificates</h2>
+                <nav>
+                    <a href="">Bootcamp Certificate</a>
+                    <a href="">Datacamp Project in Jupyter</a>
+                    <a href="">Machine Learning Project</a>
+                </nav>
+                <button class="hamburger is-active">
+                    <div class="bar"></div>
+                </button>
+            </div>
+        </header>        
         <section class="wrapper">
             <article class="img-info">
                 <h2>Data <wbr>Analytics <wbr>Bootcamp <wbr>Certificate</h2>
