--- a/index.html
+++ b/index.html
@@ -100,17 +100,22 @@
         <br>
         <header class="slide-out">
             <div class="container">
-                <h2>certificates</h2>
                 <nav>
-                    <a href="">Bootcamp Certificate</a>
-                    <a href="">Datacamp Project in Jupyter</a>
-                    <a href="">Machine Learning Project</a>
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
                 </nav>
-                <button class="hamburger is-active">
+                <button class="hamburger">
                     <div class="bar"></div>
                 </button>
             </div>
-        </header>        
+        </header>      
+        <nav class="mobile-nav">    
+            <h2>frankenmiller's webpages</h2>                      
+            <a href="">Bootcamp Certificate</a>
+            <a href="">Datacamp Project in Jupyter</a>
+            <a href="">Machine Learning Project</a>
+        </nav>          
         <section class="wrapper">
             <article class="img-info">
                 <h2>Data <wbr>Analytics <wbr>Bootcamp <wbr>Certificate</h2>
