--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         </header>      
         <nav class="mobile-nav">    
             <h2>frankenmiller's webpages</h2>                      
-            <a href="">Bootcamp Certificate</a>
-            <a href="">Datacamp Project in Jupyter</a>
-            <a href="">Machine Learning Project</a>
+            <a href="https://frankenmiller.github.io/africa-kwacha-snowflake/">Google Skills for Africa</a>
+            <a href="https://frankenmiller.github.io/jupyter-final-data-project/">Datacamp Project in Jupyter</a>
+            <a href="https://frankenmiller.github.io/javascript-neuralnet-car/">Machine Learning Project</a>
         </nav>          
         <section class="wrapper">
             <article class="img-info">
