Social icons added and tested, all but github seem to be functioning, but not yet centered

--- a/index.html
+++ b/index.html
@@ -115,6 +115,26 @@
             <a href="https://frankenmiller.github.io/africa-kwacha-snowflake/">Google Skills for Africa</a>
             <a href="https://frankenmiller.github.io/jupyter-final-data-project/">Datacamp Project in Jupyter</a>
             <a href="https://frankenmiller.github.io/javascript-neuralnet-car/">Machine Learning Project</a>
+            <ul id="social-icons">
+                <li><a style="background: none; font-size: 35px;" href="https://wa.me/260954692511">
+                    <ion-icon name="logo-whatsapp"></ion-icon>                
+                </a></li>
+                <li><a style="background: none; font-size: 35px;"  onclick="location.href='mailto:dr.frankenmiller@gmail.com';">
+                    <ion-icon name="mail-outline"></ion-icon>
+                </a></li>
+                <li><a style="background: none; font-size: 35px;" href="https://github.com/frankenmiller">
+                    <ion-icon name="logo-github"></ion-icon>
+                </a></li>
+                <li><a style="background: none; font-size: 35px;" href="https://linkedin.com/in/frankenmiller">
+                    <ion-icon name="logo-linkedin"></ion-icon>                
+                </a></li>
+                <li><a style="background: none; font-size: 35px;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                    <ion-icon name="logo-youtube"></ion-icon>                
+                </a></li>
+                <li><a style="background: none; font-size: 35px;" href="public.tableau.com/app/profile/frankenmiller">
+                    <ion-icon name="logo-tableau"></ion-icon>
+                </a></li>
+            </ul>            
         </nav>          
         <section class="wrapper">
             <article class="img-info">
@@ -134,5 +154,7 @@
         <div id="stars_one"></div>
         <div id="stars_two"></div>
         <div id="stars_three"></div>         
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>        
     </body>
     </html>
