--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <li><a style="background: none; font-size: 35px;" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                     <ion-icon name="logo-youtube"></ion-icon>                
                 </a></li>
-                <li><a style="background: none; font-size: 35px;" href="public.tableau.com/app/profile/frankenmiller">
+                <li><a style="background: none; font-size: 35px;" href="https://public.tableau.com/app/profile/frankenmiller">
                     <ion-icon name="logo-tableau"></ion-icon>
                 </a></li>
             </ul>            
