--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <nav class="mobile-nav">    
             <h2>frankenmiller's webpages</h2>                      
             <a href="https://frankenmiller.github.io/africa-kwacha-snowflake/">Google Skills for Africa</a>
+            <a href="https://frankenmiller.github.io/codecademy-certificate-swiper/">Codecademy Certificates</a>
             <a href="https://frankenmiller.github.io/jupyter-final-data-project/">Datacamp Project in Jupyter</a>
             <a href="https://frankenmiller.github.io/javascript-neuralnet-car/">Machine Learning Project</a>
             <ul id="social-icons">
